--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,3 +1,12 @@
+body {
+  font: 19px/23 px Montserrat, sans-serif;
+}
+
+body {
+  background-color: #171c28;
+  color: #ffffff;
+}
+
 h1 {
   color: red;
 }/*# sourceMappingURL=main.css.map */
