add first section

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,7 +1,5 @@
 @import 'variables';
 @import 'typography';
 @import 'layout';
-
-h1 {
-    color: red;
-}
+@import 'components';
+@import 'buttons';
