--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,12 +1,119 @@
 body {
-  font: 19px/23 px Montserrat, sans-serif;
+  font: 19px/23px Montserrat, sans-serif;
 }
 
 body {
   background-color: #171c28;
   color: #ffffff;
+  margin: 0 30px;
 }
 
-h1 {
-  color: red;
+main {
+  margin: 0 30px;
+}
+
+header.header-website {
+  height: 75px;
+  margin-bottom: 15px;
+}
+
+.section-display {
+  display: flex;
+}
+.section-display .text-content {
+  flex: 1;
+}
+.section-display .text-content .title {
+  font-size: 70px;
+  line-height: 1.1;
+  font-weight: 700;
+}
+.section-display .text-content .paragraph {
+  font-size: 30px;
+  line-height: 40px;
+}
+.section-display .illustration {
+  flex: 1;
+}
+.section-display .illustration img {
+  max-width: 100%;
+  display: block;
+  margin: auto;
+}
+
+.btn {
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  border: solid 1px;
+  transition: all ease 0.3s;
+}
+.btn:hover {
+  transform: translateY(-10px);
+}
+.btn.btn-primary {
+  background-color: #55198b;
+  border-color: #200935;
+  color: #ffffff;
+}
+.btn.btn-primary:hover {
+  background-color: #ffffff;
+  color: #55198b;
+}
+.btn.btn-secondary {
+  background-color: #aaa5ff;
+  border-color: #4a3fff;
+  color: #ffffff;
+}
+.btn.btn-secondary:hover {
+  background-color: #ffffff;
+  color: #aaa5ff;
+}
+.btn.btn-grey {
+  background-color: #868e96;
+  border-color: #555b61;
+  color: #ffffff;
+}
+.btn.btn-grey:hover {
+  background-color: #ffffff;
+  color: #868e96;
+}
+.btn.btn-lightgrey {
+  background-color: #f3efef;
+  border-color: #c7b5b5;
+  color: #ffffff;
+}
+.btn.btn-lightgrey:hover {
+  background-color: #ffffff;
+  color: #f3efef;
+}
+.btn.btn-dark {
+  background-color: #171c28;
+  border-color: black;
+  color: #ffffff;
+}
+.btn.btn-dark:hover {
+  background-color: #ffffff;
+  color: #171c28;
+}
+.btn.btn-white {
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #ffffff;
+}
+.btn.btn-white:hover {
+  background-color: #ffffff;
+  color: #ffffff;
+}
+.btn.btn-accent {
+  background-color: #fec131;
+  border-color: #c88d01;
+  color: #ffffff;
+}
+.btn.btn-accent:hover {
+  background-color: #ffffff;
+  color: #fec131;
 }/*# sourceMappingURL=main.css.map */
