--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,6 +1,17 @@
 $primary : #55198b;
 $secondary : #aaa5ff;
+$accent: #fec131;
 $grey : #868e96;
 $lightgrey : #f3efef;
 $dark : #171c28;
 $white : #ffffff;
+
+$colors: (
+    'primary': $primary,
+    'secondary': $secondary,
+    'grey': $grey,
+    'lightgrey': $lightgrey,
+    'dark': $dark,
+    'white': $white,
+    'accent': $accent,
+);
