--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -19,31 +19,71 @@ header.header-website {
 
 .section-display {
   display: flex;
+  margin-bottom: 10rem;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .section-display.right-text-content {
+    flex-direction: row-reverse;
+  }
+  .section-display.right-text-content .illustration {
+    padding-right: 5rem;
+  }
+  .section-display.left-text-content {
+    flex-direction: row;
+  }
+  .section-display.left-text-content .illustration {
+    padding-left: 5rem;
+  }
 }
 .section-display .text-content {
   flex: 1;
 }
 .section-display .text-content .title {
-  font-size: 70px;
+  font-size: 30px;
   line-height: 1.1;
   font-weight: 700;
 }
+@media screen and (min-width: 768px) {
+  .section-display .text-content .title {
+    font-size: 70px;
+  }
+}
 .section-display .text-content .paragraph {
-  font-size: 30px;
+  font-size: 15px;
   line-height: 40px;
+}
+@media screen and (min-width: 768px) {
+  .section-display .text-content .paragraph {
+    font-size: 30px;
+  }
 }
 .section-display .illustration {
   flex: 1;
+  margin-top: 50px;
 }
 .section-display .illustration img {
   max-width: 100%;
   display: block;
   margin: auto;
 }
+.section-display .competences-icons {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  font-size: 45px;
+}
+.section-display .competences-icons i {
+  transition: all 0.3s ease;
+}
+.section-display .competences-icons i:hover {
+  cursor: pointer;
+  color: #aaa5ff;
+  transform: scale(1.2);
+}
 
 .btn {
   padding: 15px 30px;
-  border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 18px;
@@ -54,66 +94,73 @@ header.header-website {
 .btn:hover {
   transform: translateY(-10px);
 }
-.btn.btn-primary {
+
+.btn-primary {
   background-color: #55198b;
   border-color: #200935;
   color: #ffffff;
 }
-.btn.btn-primary:hover {
-  background-color: #ffffff;
-  color: #55198b;
+.btn-primary:hover {
+  background-color: #6f21b6;
+  color: #ffffff;
 }
-.btn.btn-secondary {
+
+.btn-secondary {
   background-color: #aaa5ff;
   border-color: #4a3fff;
-  color: #ffffff;
+  color: #171c28;
 }
-.btn.btn-secondary:hover {
-  background-color: #ffffff;
-  color: #aaa5ff;
+.btn-secondary:hover {
+  background-color: #dad8ff;
+  color: #171c28;
 }
-.btn.btn-grey {
+
+.btn-grey {
   background-color: #868e96;
   border-color: #555b61;
-  color: #ffffff;
+  color: #171c28;
 }
-.btn.btn-grey:hover {
-  background-color: #ffffff;
-  color: #868e96;
+.btn-grey:hover {
+  background-color: #a1a8ae;
+  color: #171c28;
 }
-.btn.btn-lightgrey {
+
+.btn-lightgrey {
   background-color: #f3efef;
   border-color: #c7b5b5;
-  color: #ffffff;
+  color: #171c28;
 }
-.btn.btn-lightgrey:hover {
-  background-color: #ffffff;
-  color: #f3efef;
+.btn-lightgrey:hover {
+  background-color: white;
+  color: #171c28;
 }
-.btn.btn-dark {
+
+.btn-dark {
   background-color: #171c28;
   border-color: black;
   color: #ffffff;
 }
-.btn.btn-dark:hover {
-  background-color: #ffffff;
-  color: #171c28;
+.btn-dark:hover {
+  background-color: #2a3348;
+  color: #ffffff;
 }
-.btn.btn-white {
+
+.btn-white {
   background-color: #ffffff;
   border-color: #cccccc;
-  color: #ffffff;
+  color: #171c28;
 }
-.btn.btn-white:hover {
-  background-color: #ffffff;
-  color: #ffffff;
+.btn-white:hover {
+  background-color: white;
+  color: #171c28;
 }
-.btn.btn-accent {
+
+.btn-accent {
   background-color: #fec131;
   border-color: #c88d01;
-  color: #ffffff;
+  color: #171c28;
 }
-.btn.btn-accent:hover {
-  background-color: #ffffff;
-  color: #fec131;
+.btn-accent:hover {
+  background-color: #fed064;
+  color: #171c28;
 }/*# sourceMappingURL=main.css.map */
