--- a/styles/sass/_buttons.scss
+++ b/styles/sass/_buttons.scss
@@ -25,7 +25,7 @@
 }
 
 @each $name, $color in $colors {
-    &.btn-#{$name} {
+    .btn-#{$name} {
         background-color: $color;
         border-color: darkenBorder($color);
         color: getFontColor($color);
