--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -1,11 +1,20 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: $dark;
     color: $white;
-    margin: 0 30px;
+    @media screen and (min-width: 768px) {
+        margin: 0 30px;
+    }
+    margin: 0 20px;
 }
 
 main {
-    margin: 0 30px;
+    @media screen and (min-width: 768px) {
+        margin: 0 30px;
+    }
 }
 
 header.header-website {
